fix overlap issue

--- a/media/front-end/css/searchbox.css
+++ b/media/front-end/css/searchbox.css
@@ -133,3 +133,7 @@
 .ui-autocomplete-category p {
 
 }
+
+#results_top {
+    z-index: 10;
+}
